separate dbs fixed. CONSTATNS added.

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
     "build": "tsc",
     "lint": "eslint . --ext .ts",
     "test": "jest --config jest.config.js",
+    "db:init": "node scripts/init-databases.js",
+    "db:verify": "node scripts/verify-databases.js",
+    "db:migrate": "node scripts/migrate-collections.js",
     "reset-db": "node scripts/reset-db.js",
     "setup-amx": "bash scripts/setup-amx-db.sh",
     "fix-db": "node scripts/fix-database.js",
