--- a/server/.env.example
+++ b/server/.env.example
@@ -2,17 +2,15 @@
 PORT=3333
 NODE_ENV=development
 
-# MongoDB Configuration
-MONGO_URI=mongodb://localhost:27017/macsys
+# Client Database (Primary)
+MONGO_URI=mongodb://localhost:27017/client
 
-# JWT Secret for Authentication
+# AMX Library Database (Secondary)
+LIBRARY_DB_URI=mongodb://localhost:27017/amx
+
+# Authentication
 JWT_SECRET=your_jwt_secret_key_here
+JWT_EXPIRE=30d
 
-# Logging Level (debug, info, warn, error)
+# Logging
 LOG_LEVEL=info
-
-# Client URL for CORS (comma-separated if multiple)
-CLIENT_URL=http://localhost:5173
-
-# Optional: Redis for caching (if implemented)
-# REDIS_URL=redis://localhost:6379
