--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
