--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:server": "cd server && npm run dev",
     "dev:client": "cd client && npm run dev",
     "build": "npm run build:server && npm run build:client",
+    "build:all": "npm run build:server && npm run build:client",
     "build:server": "cd server && npm run build",
     "build:client": "cd client && npm run build",
     "install:all": "npm install && npm run install:server && npm run install:client",
@@ -18,6 +19,7 @@
     "test": "npm run test:server && npm run test:client",
     "test:server": "cd server && npm test",
     "test:client": "cd client && npm test",
+    "test:all": "npm run lint && npm run build:all && npm run test",
     "lint": "npm run lint:server && npm run lint:client",
     "lint:server": "cd server && npm run lint",
     "lint:client": "cd client && npm run lint",
@@ -28,6 +30,10 @@
     "format:check:server": "cd server && npm run format:check",
     "format:check:client": "cd client && npm run format:check",
     "fix": "npm run format && npm run lint",
+    "watch": "concurrently \"npm run watch:server\" \"npm run watch:client\"",
+    "watch:server": "cd server && tsc --watch",
+    "watch:client": "cd client && tsc --watch --noEmit",
+    "pre-push": "npm run test:all",
     "prepare": "husky install"
   },
   "keywords": [
