--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -32,7 +32,11 @@
       "~/context/*": ["context/*"],
       "~/layouts/*": ["layouts/*"],
       "~/pages/*": ["pages/*"],
-      "~/api/*": ["api/*"]
+      "~/api/*": ["api/*"],
+      /* Handle problematic Windows path */
+      "D:/dashboard": ["pages/Dashboard.tsx"],
+      "D:\\dashboard": ["pages/Dashboard.tsx"],
+      "dashboard": ["pages/Dashboard.tsx"]
     }
   },
   "include": ["src"],
