--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "exports": {
-    "./dashboard": "./src/pages/Dashboard.tsx",
-    "D:/dashboard": "./src/pages/Dashboard.tsx",
-    "D:\\dashboard": "./src/pages/Dashboard.tsx"
+    "./dashboard": "./src/pages/Dashboard.tsx"
   },
   "scripts": {
     "dev": "vite",
@@ -41,6 +39,7 @@
     "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@types/papaparse": "^5.3.16",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -49,6 +48,7 @@
     "formik": "^2.4.6",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.503.0",
+    "papaparse": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
