--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "modbus-serial": "^8.0.11",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "socket.io": "^4.8.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
